clusters/cl01tl/manifests/komodo/HTTPRoute-komodo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: komodo
  labels:
    app.kubernetes.io/instance: komodo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: komodo
    helm.sh/chart: komodo-5.2.1
  namespace: komodo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "komodo.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: komodo-main
          namespace: komodo
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
